xanin-k3d/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
  labels:
    app: backend
    name: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
      name: app3
  template:
    metadata:
      labels:
        app: backend
        name: app3
    spec:
      containers:
      - name: backend
        image: adijaiswal/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
