xanin-k3d/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
  labels:
    app: frontend
    name: app3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
      name: app3
  template:
    metadata:
      labels:
        app: frontend
        name: app3
    spec:
      containers:
      - name: frontend
        image: frontend/frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: prod
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
